# Runday-Build-Tool

./: .gitignore  CDNManger.py  GUIManager.py  README.md  gui_manager.py  main.py  notion_manager.py  pyproject.toml  qr_manger.py  requirements.txt
src/: gui_manager.py  qr_manger.py
